--- a/src/game.html
+++ b/src/game.html
@@ -6,20 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cards AI</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <div class="board">
       <div id="cards" class="cards">
-        <div class="card">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/%D0%92%D0%BB%D0%B0%D0%B4_%D0%91%D1%83%D0%BC%D0%B0%D0%B3%D0%B0_%283%29_%D0%BD%D0%B0_VK_Fest_5_%28cropped%29.jpg/800px-%D0%92%D0%BB%D0%B0%D0%B4_%D0%91%D1%83%D0%BC%D0%B0%D0%B3%D0%B0_%283%29_%D0%BD%D0%B0_VK_Fest_5_%28cropped%29.jpg" />
-          <h3>Demo 1</h3>
-          <p>demo 1</p>
-        </div>
-
       </div>
     </div>
   </body>
+  
+  <template id="cardTemplate">
+    <div class="card">
+      <h3>Влад А4</h3>
+      <div class="textContainer">
+        <p>Погнали пить пиво??</p>
+      <div>
+    </div>
+  </template>
 
   <link rel="stylesheet" href="game.css">
   <script type="text/javascript" src="game.js"></script>
