переписан полностью фронт: * 300iq code refactor * взятие карт щас идет через бэк * прогресс игрока хранится тоже на бэке

--- a/src/game.html
+++ b/src/game.html
@@ -55,6 +55,7 @@
   </template>
 
   <link rel="stylesheet" href="game.css">
+  <script type="text/javascript" src="render-helper.js"></script>
   <script type="text/javascript" src="game.js"></script>
 
 </html>
