--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<a href="game.html"><p>Начать играть</p></a>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Cards AI</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap" rel="stylesheet">
+    </head>
+
+    <body>
+    <div class="menu">
+        <div class="title">Cards AI</div>
+        <div class="points">
+            <a href="game.html" class="player">
+                <img src="menu-images/play.png" alt="Play Image">
+                <span>Играть</span>
+            </a>
+        </div>
+    </div>
+    </body>
+
+    <link rel="stylesheet" href="index.css">
 </html>
