feat: added death screen

--- a/src/game.html
+++ b/src/game.html
@@ -51,6 +51,23 @@
     <div class="dot-text"></div>
   </div>
 
+  <div id="lose-screen" class="disabled">
+    <div class="screen-overlap">
+      <div class="ending-menu ending-menu_lose">
+        <div class="ending-text ending-text_lose">
+          <b>Отчислен!</b>
+        </div>
+        <img src="../resources-images/ending_death.png" width="300">
+
+        <br>
+
+        <div class="menu-link">
+          <a>Вернуться в меню</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
   </body>
 
   <template id="cardTemplate">
