--- a/src/game.html
+++ b/src/game.html
@@ -57,12 +57,12 @@
         <div class="ending-text ending-text_lose">
           <b>Отчислен!</b>
         </div>
-        <img src="../resources-images/ending_death.png" width="300">
+        <img src="resources-images/ending_death.png" width="300">
 
         <br>
 
-        <div class="menu-link">
-          <a>Вернуться в меню</a>
+        <div class="menu-links">
+          <a href="index.html" class="menu-link">Вернуться в меню</a>
         </div>
       </div>
     </div>
