--- a/src/game.html
+++ b/src/game.html
@@ -72,9 +72,11 @@
 
   <template id="cardTemplate">
     <div class="card">
-      <h3>Влад А4</h3>
-      <div class="textContainer">
-        <p>Погнали пить пиво??</p>
+      <div style="pointer-events: none;">
+        <h3>Влад А4</h3>
+        <div class="textContainer">
+          <p>Погнали пить пиво??</p>
+        </div>
       </div>
     </div>
   </template>
