feat: added menu

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
     <body>
     <div class="menu">
-        <div class="title">Cards AI</div>
+        <div class="title">Cards AI <img src="menu-images/pig.gif" class="logo"></div>
         <div class="points">
             <a href="game.html" class="player">
                 <img src="menu-images/play.png" alt="Play Image">
