fix: add mobile logo

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
                 <span>Играть</span>
             </a>
         </div>
+        <img src="menu-images/pig.gif" class="logo mobile_logo">
     </div>
     </body>
 
