screen reader adaptation

--- a/src/game.html
+++ b/src/game.html
@@ -15,27 +15,27 @@
   <div class="header">
     <div class="resources">
       <div class="resource">
-        <img src="assets/images/resource-1.png" alt="Resource 1" class="resource-image">
+        <img src="assets/images/resource-1.png" alt="Ресурс знаний" class="resource-image">
         <div class="progress-bar" id="progress-bar-1">
-          <img src="assets/images/progress-bar-1.png" alt="Progress bar 1" class="progress-bar-image">
+          <img src="assets/images/progress-bar-1.png" alt="Ресурс знаний" class="progress-bar-image">
         </div>
       </div>
       <div class="resource">
-        <img src="assets/images/resource-2.png" alt="Resource 2" class="resource-image">
+        <img src="assets/images/resource-2.png" alt="Ресурс дружбы" class="resource-image">
         <div class="progress-bar" id="progress-bar-2">
-          <img src="assets/images/progress-bar-2.png" alt="Progress bar 2" class="progress-bar-image">
+          <img src="assets/images/progress-bar-2.png" alt="Ресурс дружбы" class="progress-bar-image">
         </div>
       </div>
       <div class="resource">
-        <img src="assets/images/resource-3.png" alt="Resource 3" class="resource-image">
+        <img src="assets/images/resource-3.png" alt="Ресурс денег" class="resource-image">
         <div class="progress-bar" id="progress-bar-3">
-          <img src="assets/images/progress-bar-3.png" alt="Progress bar 3" class="progress-bar-image">
+          <img src="assets/images/progress-bar-3.png" alt="Ресурс денег" class="progress-bar-image">
         </div>
       </div>
       <div class="resource">
-        <img src="assets/images/resource-4.png" alt="Resource 4" class="resource-image">
+        <img src="assets/images/resource-4.png" alt="Ресурс здоровья" class="resource-image">
         <div class="progress-bar" id="progress-bar-4">
-          <img src="assets/images/progress-bar-4.png" alt="Progress bar 4" class="progress-bar-image">
+          <img src="assets/images/progress-bar-4.png" alt="Ресурс здоровья" class="progress-bar-image">
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@
         <div class="ending-text ending-text_lose">
           <b>Отчислен!</b>
         </div>
-        <img src="assets/images/ending_death.png" width="300">
+        <img src="assets/images/ending_death.png" width="300" alt="Дракон в огне">
 
         <br>
 
