--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Cards AI</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap" rel="stylesheet">
-    </head>
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Cards AI</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap" rel="stylesheet">
+</head>
 
-    <body>
-    <div class="menu">
-        <div class="title">Cards AI <img src="menu-images/pig.gif" class="logo"></div>
-        <div class="points">
-            <a href="game.html" class="player">
-                <img src="menu-images/play.png" alt="Play Image">
-                <span>Играть</span>
-            </a>
-        </div>
-        <img src="menu-images/pig.gif" class="logo mobile_logo">
+<body>
+<div class="menu">
+    <div class="title">
+        <p>Cards AI</p>
+        <img src="menu-images/pig.gif" alt="Крутящаяся свинья" class="logo">
     </div>
-    </body>
+    <div class="points">
+        <a href="game.html" class="player">
+            <img src="menu-images/play.png" alt="Кнопка играть">
+            <span><p>Играть</p></span>
+        </a>
+    </div>
+    <img src="menu-images/pig.gif" class="logo mobile_logo">
+</div>
+</body>
 
-    <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="index.css">
 </html>
